--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "bundle": "yarn build && npx xnft bundle"
   },
   "dependencies": {
+    "@elusiv/sdk": "^0.1.22",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@solana/wallet-adapter-react": "^0.15.32",
-    "@solana/web3.js": "^1.66.2",
+    "@solana/web3.js": "^1.78.5",
     "axios": "^1.4.0",
     "encoding": "^0.1.13",
     "next": "^13.4.19",
